tests/expectations/compiler/async_blocks/future_not_all_passed_to_async_block_fail.out
Error [ETYC0372104]: Not all Finals were consumed: f1
    --> compiler-test:14:22
     |
  14 |         return final {
     |                      ^
  15 |             f0.run();
     |             ^^^^^^^^^
  16 |             f3.run();
     |             ^^^^^^^^^
  17 |             f2.run();
     |             ^^^^^^^^^
  18 |             f5.run();
     |             ^^^^^^^^^
  19 |             f4.run();
     |             ^^^^^^^^^
  20 |         };
     |         ^
     |
     = Make sure all Finals are consumed exactly once. Consume by passing to a final fn call or final block.
